prac2/secgp.tf
resource "aws_security_group" "allow_sceg" {
  name        = "allow_sceg"
  description = "allow_sceg inbound traffic"
  vpc_id      = aws_vpc.mainvpc.id


  ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.mainvpc.cidr_block]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
